--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ APP_SECRET=acc355799991c0e64f5ebb1182fb510a
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://root:@127.0.0.1:3306/netrom_db?serverVersion=mariadb-10.4.28"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/netrom_db?serverVersion=10.9.3-MariaDB"
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
