--- a/.env
+++ b/.env
@@ -29,3 +29,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/netrom_db?serverVersion=10.9.3-MariaD
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://c44a14e7430623:fa015e6e1cd4b0@sandbox.smtp.mailtrap.io:2525
+###< symfony/mailer ###
+
+
